# message_formatter_project

./: README.md  pyproject.toml
src/: main.py
src/message_formatter_project/: __init__.py  message_formatter.py
