[project]
name = "message-formatter-project"
version = "0.1.0"
description = "A Python project that formats messages using custom decorators"
readme = "README.md"
authors = [
    { name = "furqan5911", email = "furqanmalick2001@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
message-formatter-project = "message_formatter_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
